--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
     "require": {
       "php": ">=5.4.0",
       "jeremeamia/superclosure": "^2.0",
-      "twig/twig": "1.x",
-      "avatarguru/theme": "master@dev"
+      "twig/twig": "1.x"
     },
     "require-dev": {
       "illuminate/support": ">=5.0.1"
